--- a/pr/index.html
+++ b/pr/index.html
@@ -13,7 +13,7 @@
 
             <h1 class="title">ToDo list</h1>
 
-            <div>
+            <div class="todo-header">
                 <input type="text" class="todo-input">
                 <button class="add-btn">Add</button>
             </div>
@@ -22,6 +22,10 @@
                 <li class="list-item">
                     <input type="checkbox" class="text-textbox">
                     <span class="task-text">Task 1</span>
+                    <button class="task-delete-btn">x</button>
+
+                    <input type="checkbox" class="text-textbox">
+                    <span class="task-text">Task 2</span>
                     <button class="task-delete-btn">x</button>
                 </li>
             </ul>
