--- a/pr/index.html
+++ b/pr/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/back.jpg" type="image/x-icon">
     <title>ToDo list</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
             <h1 class="title">ToDo list</h1>
 
             <div class="todo-header">
-                <input type="text" class="todo-input">
+                <input type="text" class="todo-input" placeholder="Add a task...">
                 <button class="add-btn">Add</button>
             </div>
 
@@ -23,11 +24,13 @@
                     <input type="checkbox" class="text-textbox">
                     <span class="task-text">Task 1</span>
                     <button class="task-delete-btn">x</button>
-
+                </li>
+                <li class="list-item">
                     <input type="checkbox" class="text-textbox">
                     <span class="task-text">Task 2</span>
                     <button class="task-delete-btn">x</button>
                 </li>
+                
             </ul>
 
             <button class="clear-btn">Clear</button>
